@@ -1,3 +1,8 @@
+2005-04-19  Sureshkumar T  <tsureshkumar@novell.com>
+
+	* SqlDataReader.cs: NextResult (): Re-create schema table for each
+	result set. don't re-use, as it may be referenced from somewhere.
+
 2005-04-07  Sureshkumar T  <tsureshkumar@novell.com>
 	    Ankit Jain     <radical@corewars.org>
 
